--- a/marketing/templates/marketing/about.html
+++ b/marketing/templates/marketing/about.html
@@ -9,7 +9,7 @@
         <div class="row align-items-center g-lg-5">
             <div class="col-lg-7">
                 <h1 class="brand-title mb-4">About Pillar & Post</h1>
-                <p class="lead text-secondary mb-4">
+                <p class="mb-4">
                     Pillar & Post helps recruitment agencies create beautiful, branded websites in minutes. We provide the structural integrity your digital presence needs.
                 </p>
                 
