--- a/cms/templates/cms/preview_wrapper.html
+++ b/cms/templates/cms/preview_wrapper.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-<div id="preview-wrapper" class="preview-frame-wrapper desktop-mode mx-auto shadow rounded border overflow-hidden">
+<div id="preview-wrapper" title="Template preview" class="preview-frame-wrapper desktop-mode mx-auto shadow rounded border overflow-hidden">
     <iframe src="{% url 'cms:live_preview' %}" id="preview-frame" style="width: 100%; height: 100%; border: none;"></iframe>
 </div>
 {% endblock %}
