small changes on code for perfection

--- a/cms/static/cms/css/tenant_themes.css
+++ b/cms/static/cms/css/tenant_themes.css
@@ -355,6 +355,16 @@
     color: inherit;
 }
 
+/* Footer Heading Styling */
+.footer-heading {
+    font-size: 0.875rem;  
+    font-weight: 700;          
+    text-transform: uppercase; 
+    letter-spacing: 1px;     
+    margin-bottom: 1.5rem;   
+    color: inherit;           
+}
+
 
 /* responsive */
 
