--- a/cms/templates/cms/job_form.html
+++ b/cms/templates/cms/job_form.html
@@ -1,4 +1,5 @@
 {% extends "cms/base_cms.html" %}
+{% block title %}Create/Edit Job | {{ profile.display_name }}{% endblock %}
 {% load crispy_forms_tags %}
 {% load static %}
 
