--- a/cms/templates/cms/edit_site.html
+++ b/cms/templates/cms/edit_site.html
@@ -1,4 +1,5 @@
 {% extends "cms/base_cms.html" %}
+{% block title %}Edit Site | {{ profile.display_name }}{% endblock %}
 {% load crispy_forms_tags %}
 {% load static %}
 
