--- a/cms/templates/cms/job_confirm_delete.html
+++ b/cms/templates/cms/job_confirm_delete.html
@@ -1,4 +1,6 @@
 {% extends "cms/base_cms.html" %}
+{% block title %}Delete Job | {{ profile.display_name }}{% endblock %}
+{% load static %}
 
 {% block content %}
 <div class="container py-5">
