--- a/cms/templates/cms/manage_jobs.html
+++ b/cms/templates/cms/manage_jobs.html
@@ -1,4 +1,5 @@
 {% extends "cms/base_cms.html" %}
+{% block title %}Manage Jobs | {{ profile.display_name }}{% endblock %}
 {% load static %}
 
 {% block content %}
