--- a/cms/templates/cms/payment_success.html
+++ b/cms/templates/cms/payment_success.html
@@ -1,4 +1,6 @@
 {% extends 'cms/base_cms.html' %}
+{% block title %}Payment Success | {{ profile.display_name }}{% endblock %}
+{% load static %}
 
 {% block content %}
 <div class="container py-5">
