more DOCs and trialling a security change after reviewing logs

--- a/marketing/templates/marketing/about.html
+++ b/marketing/templates/marketing/about.html
@@ -24,8 +24,12 @@
             </div>
 
             <div class="col-lg-5">
-                <img src="{% static 'marketing/images/about-pp.webp' %}" class="img-fluid about-img-styled" alt="black and white photo of architectural pillars">
-            </div>
+                <img src="{% static 'marketing/images/about-pp.webp' %}" 
+                    class="img-fluid about-img-styled" 
+                    alt="Black and white photo of architectural pillars"
+                    width="500"
+                    height="500">
+                </div>
         </div>
 
         <div class="text-center mt-5 pt-5 border-top">
