--- a/marketing/templates/marketing/landing.html
+++ b/marketing/templates/marketing/landing.html
@@ -9,8 +9,12 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-5 mb-4 mb-lg-0">
-                <img src="{% static 'marketing/images/hero-image.webp' %}" class="img-fluid hero-img-sm" alt="Architectural pillars">
-            </div>
+               <img src="{% static 'marketing/images/hero-image.webp' %}" 
+                    class="img-fluid hero-img-sm" 
+                    alt="Architectural pillars"
+                    width="600" 
+                    height="400">
+                </div>
             
             <div class="col-lg-6 offset-lg-1 text-lg-start text-center">
                 <h1 class="display-4 fw-bold mb-3">Professional Recruitment Websites</h1>
