--- a/cms/templates/cms/base_tenant.html
+++ b/cms/templates/cms/base_tenant.html
@@ -31,7 +31,7 @@
                     <span class="brand-text">  {{ profile.display_name|upper }}</span>
             </a>
             
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             
